--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "author": "Birba Aubin",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^4.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
