--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Backend of the research activities monitoring application. Made with Express and MongoDB.",
   "main": "server.js",
+  "engines": {
+    "node": "12.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
