--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.1",
+    "nodemailer": "^6.4.6",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
