--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "npm run seed && npm run dev",
+    "dev": "nodemon server.js",
     "seed": "node seeds/seed.js"
   },
   "author": "Birba Aubin",
