--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "seed": "node seeds/seed.js"
+    "seed": "node --trace-warnings seeds/seed.js "
   },
   "author": "Birba Aubin",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.0",
+    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
-    "express-jwt": "^5.3.1",
-    "express-validator": "^6.4.0",
+    "express-fileupload": "^1.1.7-alpha.4",
+    "express-jwt": "^5.3.3",
+    "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.1",
-    "nodemailer": "^6.4.6",
-    "nodemon": "^2.0.2",
+    "mongoose": "^5.9.25",
+    "node-gyp": "^7.0.0",
+    "nodemailer": "^6.4.10",
+    "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
