--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "seed": "node --trace-warnings seeds/seed.js "
+    "seed": "node seeds/seed.js "
   },
   "author": "Birba Aubin",
   "license": "ISC",
