--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "12.5.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "seed": "node seeds/seed.js "
   },
   "author": "Birba Aubin",
