--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
 MONGODB_URI="mongodb://localhost/research-activities-db"
+EMAIL_ADDRESS="portailmarocaindesrecherches@gmail.com"
+EMAIL_PASSWORD="lpom,8631hsy"
