--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MONGODB_URI="mongodb://localhost/research-activities-db"
+PORT=8888
+JWT_SECRET="top_secret"
+EMAIL_ADDRESS="portailmarocaindesrecherches@gmail.com"
+EMAIL_PASSWORD="lpom,8631hsy"
+
