--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "puppeteer": "^5.2.1"
+    "passport-local": "^1.0.0"
   }
 }
